2010-11-25	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/fat_file.c, libfs/src/imfs/imfs_debug.c,
	libfs/src/imfs/imfs_directory.c, libfs/src/imfs/imfs_getchild.c,
	posix/src/killinfo.c, score/inline/rtems/score/schedulerpriority.inl,
	score/inline/rtems/score/watchdog.inl, score/src/apiext.c,
	score/src/chain.c, score/src/coremsgflushsupp.c,
	score/src/coremsginsert.c, score/src/objectshrinkinformation.c,
	score/src/schedulerpriorityyield.c,
	score/src/threadqdequeuepriority.c,
	score/src/threadqenqueuepriority.c,
	score/src/threadqextractpriority.c, score/src/threadqfirstfifo.c,
	score/src/threadqfirstpriority.c, score/src/threadyieldprocessor.c,
	score/src/userextthreadbegin.c, score/src/userextthreadcreate.c,
	score/src/userextthreaddelete.c, score/src/userextthreadrestart.c,
	score/src/userextthreadstart.c, score/src/userextthreadswitch.c,
	score/src/watchdogreportchain.c: Avoid chain API violations.

2010-11-24	Gedare Bloom <giddyup44@yahoo.com>

	PR 1647/cpukit
	* posix/src/nanosleep.c, posix/src/sched_yield.c,
	rtems/src/taskwakeafter.c, sapi/include/confdefs.h,
	sapi/include/rtems/config.h, sapi/src/exinit.c, score/Makefile.am,
	score/preinstall.am, score/include/rtems/score/prioritybitmap.h,
	score/include/rtems/score/thread.h,
	score/inline/rtems/score/thread.inl, score/src/thread.c,
	score/src/threadchangepriority.c, score/src/threadclearstate.c,
	score/src/threadclose.c, score/src/threadinitialize.c,
	score/src/threadready.c, score/src/threadresume.c,
	score/src/threadsetpriority.c, score/src/threadsetstate.c,
	score/src/threadsettransient.c,	score/src/threadsuspend.c,
	score/src/threadtickletimeslice.c: Refactor scheduler out of thread
	handler to facilitate alternate scheduler implementations.
	* score/src/threadyieldprocessor.c: Removed.
	* score/src/schedulerprioritythreadschedulerupdate.c,
	score/src/schedulerprioritythreadschedulerfree.c,
	score/src/schedulerpriorityblock.c, score/src/scheduler.c,